# ai-workflows

./: pyproject.toml  pytest.ini
notebooks/: langchain_react.ipynb
prompts/: docstring.md
src/agents/: hello.py  langchain_react.py
src/pipelines/: langchain_pipeline.py
src/workflows/: hybrid.py
tests/: test_hello.py  test_langchain_pipeline.py  test_langchain_react.py  test_pipeline.py
tests/agents/: test_integration_agent.py
tests/lab/: test_hello.py
tests/pipelines/: test_unit_pipeline.py
