[tool.poetry]
name = "agent-learning-project"
version = "0.1.0"
description = "A project focused on learning about agents using Jupyter notebooks"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "agents", from = "src" },
    { include = "pipelines", from = "src" },
    { include = "workflows", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
notebook = "^6.5.4"
ipykernel = "^6.23.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
openai = "^1.51.0"
numexpr = "^2.10.1"
pytest = "^8.3.3"
langchain-cli = "^0.0.31"
langchain-openai = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false